--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ body {
 
 /* Container Styling */
 .container {
+  overflow-wrap: break-word;
+  max-width: 80%;
   text-align: center;
   padding: 30px;
   border-radius: 15px;
@@ -53,8 +55,13 @@ h1 {
   transition: color 0.3s ease-in-out;
 }
 
+h1 {
+  background-color: rgba(255, 111, 97, 0.2);
+  border-radius: 5px;
+}
+
 h1:hover {
-  color: #ff6f61; /* Change color on hover */
+  background-color: rgba(255, 111, 97, 0.5);
 }
 
 /* Story Styling */
@@ -65,6 +72,7 @@ h1:hover {
   min-height: 40px;
   transition: color 0.3s ease-in-out;
   cursor: pointer;
+  line-height: 30px;
 }
 
 #story:hover {
